--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "algebra.js": "^0.2.6",
     "core-js": "^3.6.5",
+    "dotenv": "^8.2.0",
     "firebase": "^7.15.0",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
